--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ bind -n C-Down select-pane -D
 
 set -g status-style 'bg=default'
 set -g status-right ''
+set -g base-index 1
 
 set -g pane-border-lines simple
 set -g pane-active-border-style fg="#FFFFFF"
